# advent-of-code-25

./: .gitignore  Cargo.toml
aoc25/: Cargo.toml
aoc25/src/: char_grid.rs  io.rs  lib.rs  math.rs  range.rs
d1-p1-secret-entrance/: Cargo.toml
d1-p1-secret-entrance/src/: main.rs
d1-p2-secret-entrance/: Cargo.toml  input_test.txt
d1-p2-secret-entrance/src/: main.rs
d1-secret-entrance/: Cargo.toml
d1-secret-entrance/src/: main.rs
d10-p1-factory/: Cargo.toml  input.txt
d10-p1-factory/src/: main.rs
d2-p1-gift-shop/: Cargo.toml
d2-p1-gift-shop/src/: main.rs
d2-p2-gift-shop/: Cargo.toml
d2-p2-gift-shop/src/: main.rs
d3-p1-lobby/: Cargo.toml
d3-p1-lobby/src/: main.rs
d3-p2-lobby/: Cargo.toml
d3-p2-lobby/src/: main.rs
d4-p1-printing-department/: Cargo.toml
d4-p1-printing-department/src/: main.rs
d4-p2-printing-department/: Cargo.toml
d4-p2-printing-department/src/: main.rs
d5-p1-cafeteria/: Cargo.toml
d5-p1-cafeteria/src/: main.rs
d5-p2-cafeteria/: Cargo.toml
d5-p2-cafeteria/src/: main.rs
d6-p1-trash-compactor/: Cargo.toml
d6-p1-trash-compactor/src/: main.rs
d6-p2-trash-compactor/: Cargo.toml  input.txt
d6-p2-trash-compactor/src/: main.rs
d7-p1-laboratories/: Cargo.toml
d7-p1-laboratories/src/: main.rs
d7-p2-laboratories/: Cargo.toml
d7-p2-laboratories/src/: main.rs
d8-p1-playground/: Cargo.toml
d8-p2-playground/: Cargo.toml
d9-p1-movie-theater/: Cargo.toml
d9-p2-movie-theater/: Cargo.toml  input_example_2.txt  input_example_3.txt  input_example_4.txt  input_example_baked.txt
scripts/: new_puzzle.sh
(+8 files in other folders)
